docs-archive/apache-airflow-providers-fab/3.0.0/_sources/_api/airflow/providers/fab/auth_manager/models/index.rst.txt
airflow.providers.fab.auth_manager.models
=========================================

.. py:module:: airflow.providers.fab.auth_manager.models


Submodules
----------

.. toctree::
   :maxdepth: 1

   /_api/airflow/providers/fab/auth_manager/models/anonymous_user/index
   /_api/airflow/providers/fab/auth_manager/models/db/index


Attributes
----------

.. autoapisummary::

   airflow.providers.fab.auth_manager.models.Identity
   airflow.providers.fab.auth_manager.models.assoc_group_role
   airflow.providers.fab.auth_manager.models.assoc_permission_role
   airflow.providers.fab.auth_manager.models.assoc_user_role
   airflow.providers.fab.auth_manager.models.assoc_user_group


Classes
-------

.. autoapisummary::

   airflow.providers.fab.auth_manager.models.Action
   airflow.providers.fab.auth_manager.models.Resource
   airflow.providers.fab.auth_manager.models.Role
   airflow.providers.fab.auth_manager.models.Permission
   airflow.providers.fab.auth_manager.models.Group
   airflow.providers.fab.auth_manager.models.User
   airflow.providers.fab.auth_manager.models.RegisterUser


Functions
---------

.. autoapisummary::

   airflow.providers.fab.auth_manager.models.mapped_column
   airflow.providers.fab.auth_manager.models.add_index_on_ab_user_username_postgres
   airflow.providers.fab.auth_manager.models.add_index_on_ab_register_user_username_postgres


Package Contents
----------------

.. py:function:: mapped_column(*args, **kwargs)

.. py:data:: Identity
   :value: None


.. py:data:: assoc_group_role

.. py:data:: assoc_permission_role

.. py:data:: assoc_user_role

.. py:data:: assoc_user_group

.. py:class:: Action

   Bases: :py:obj:`flask_appbuilder.Model`


   Represents permission actions such as `can_read`.


   .. py:attribute:: __tablename__
      :value: 'ab_permission'



   .. py:attribute:: id
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: name
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:method:: __repr__()


.. py:class:: Resource

   Bases: :py:obj:`flask_appbuilder.Model`


   Represents permission object such as `User` or `Dag`.


   .. py:attribute:: __tablename__
      :value: 'ab_view_menu'



   .. py:attribute:: id
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: name
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:method:: __eq__(other)


   .. py:method:: __neq__(other)


   .. py:method:: __repr__()


.. py:class:: Role

   Bases: :py:obj:`flask_appbuilder.Model`


   Represents a user role to which permissions can be assigned.


   .. py:attribute:: __tablename__
      :value: 'ab_role'



   .. py:attribute:: id
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: name
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: permissions
      :type:  sqlalchemy.orm.Mapped[list[Permission]]


   .. py:method:: __repr__()


.. py:class:: Permission

   Bases: :py:obj:`flask_appbuilder.Model`


   Permission pair comprised of an Action + Resource combo.


   .. py:attribute:: __tablename__
      :value: 'ab_permission_view'



   .. py:attribute:: __table_args__


   .. py:attribute:: id
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: action_id
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: action
      :type:  sqlalchemy.orm.Mapped[Action]


   .. py:attribute:: resource_id
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: resource
      :type:  sqlalchemy.orm.Mapped[Resource]


   .. py:method:: __repr__()


.. py:class:: Group

   Bases: :py:obj:`flask_appbuilder.Model`


   Represents an Airflow user group.


   .. py:attribute:: __tablename__
      :value: 'ab_group'



   .. py:attribute:: id
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: name
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: label
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: description
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: users
      :type:  sqlalchemy.orm.Mapped[list[User]]


   .. py:attribute:: roles
      :type:  sqlalchemy.orm.Mapped[list[Role]]


   .. py:method:: __repr__()


.. py:class:: User

   Bases: :py:obj:`flask_appbuilder.Model`, :py:obj:`airflow.api_fastapi.auth.managers.models.base_user.BaseUser`


   Represents an Airflow user which has roles assigned to it.


   .. py:attribute:: __tablename__
      :value: 'ab_user'



   .. py:attribute:: id
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: first_name
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: last_name
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: username
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: password
      :type:  sqlalchemy.orm.Mapped[str | None]


   .. py:attribute:: active
      :type:  sqlalchemy.orm.Mapped[bool | None]


   .. py:attribute:: email
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: last_login
      :type:  sqlalchemy.orm.Mapped[datetime.datetime | None]


   .. py:attribute:: login_count
      :type:  sqlalchemy.orm.Mapped[int | None]


   .. py:attribute:: fail_login_count
      :type:  sqlalchemy.orm.Mapped[int | None]


   .. py:attribute:: roles
      :type:  sqlalchemy.orm.Mapped[list[Role]]


   .. py:attribute:: created_on
      :type:  sqlalchemy.orm.Mapped[datetime.datetime | None]


   .. py:attribute:: changed_on
      :type:  sqlalchemy.orm.Mapped[datetime.datetime | None]


   .. py:property:: created_by_fk
      :type: sqlalchemy.Column



   .. py:property:: changed_by_fk
      :type: sqlalchemy.Column



   .. py:attribute:: created_by
      :type:  sqlalchemy.orm.Mapped[User]


   .. py:attribute:: changed_by
      :type:  sqlalchemy.orm.Mapped[User]


   .. py:method:: get_user_id()
      :classmethod:



   .. py:property:: is_authenticated


   .. py:property:: is_active


   .. py:property:: is_anonymous


   .. py:property:: perms


   .. py:method:: get_id()


   .. py:method:: get_name()


   .. py:method:: get_full_name()


   .. py:method:: __repr__()


.. py:class:: RegisterUser

   Bases: :py:obj:`flask_appbuilder.Model`


   Represents a user registration.


   .. py:attribute:: __tablename__
      :value: 'ab_register_user'



   .. py:attribute:: id


   .. py:attribute:: first_name
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: last_name
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: username
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: password
      :type:  sqlalchemy.orm.Mapped[str | None]


   .. py:attribute:: email
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: registration_date
      :type:  sqlalchemy.orm.Mapped[datetime.datetime | None]


   .. py:attribute:: registration_hash
      :type:  sqlalchemy.orm.Mapped[str | None]


.. py:function:: add_index_on_ab_user_username_postgres(table, conn, **kw)

.. py:function:: add_index_on_ab_register_user_username_postgres(table, conn, **kw)

